name:                force-layout
version:             0.4.1
synopsis:            Simple force-directed layout
description:         Simulation engine for doing simple force-based layout,
                     /e.g./ for trees or graphs.  See the diagrams-contrib package
                     for usage examples.
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey
maintainer:          byorgey@gmail.com
bug-reports:         https://github.com/diagrams/force-layout/issues
copyright:           (c) 2011 Brent Yorgey
category:            Physics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  CHANGELOG.md
tested-with:         GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.5 || ==9.8.2 || ==9.10.1 || ==9.12.1

source-repository head
  type:     git
  location: git://github.com/diagrams/force-layout.git

library
  exposed-modules:     Physics.ForceLayout
  build-depends:       base >= 4.2 && < 4.22,
                       linear >= 1.10 && < 1.24,
                       lens >= 3.0 && < 5.4,
                       containers >=0.4 && < 0.8,
                       data-default >= 0.8 && < 0.9
  hs-source-dirs:      src
  default-language:    Haskell2010
